kube/deploy/core/monitoring/grafana/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-tailscale
  namespace: monitoring
  annotations:
    tailscale.com/tags: "tag:k8s-grafana"
spec:
  ingressClassName: "tailscale"
  rules:
    - host: &host "${APP_DNS_TS_GRAFANA}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: grafana
                port:
                  number: 80
  tls:
    - hosts: [*host]
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-victoria-tailscale
  namespace: monitoring
  annotations:
    tailscale.com/tags: "tag:k8s-grafana"
spec:
  ingressClassName: "tailscale"
  rules:
    - host: &host "v${APP_DNS_TS_GRAFANA}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: grafana-victoria
                port:
                  number: 80
  tls:
    - hosts: [*host]
